GNOME Bugzilla – Bug 776459
event beginning date automatically gets decremented/incremented until it reaches January/December
Last modified: 2017-02-27 11:47:35 UTC
In some cases event start date get decremented automatically (without user interaction) until it reaches January 1st (or December in other cases). How to reproduce: 1. Create some event (Should not be in the month of January) 2. Edit the event, and in detailed edit dialog select beginning month to January by clicking the back button in calendar widget (any year) 3. Now cancel the edit. 4. Now create another event (or open any created event) -> Edit (to open detailed event entry dialog), You can see that the month is Changed until the event begin date becomes January. (This can also reproduced for December and event end date). As this is very common, I'm marking this as blocker. fixing bug 776368 should also fix this. Thanks.
I've run into this issue as well. It's pretty bizarre, and frustrating -- sometimes I can't enter the actual date of the event I'm trying to edit, because every time I open the date picker widget, or every time I try to manually type in a date, it keeps counting backwards to January 1st again. I'm having a hard time reliably duplicating the bug; it just seems to happen randomly. Restarting the application temporarily resolves the problem, but that's not a great workaround if you're trying to enter a few events and todos at once while you can remember them.
Created attachment 346583 [details] [review] multi-choice: Fix endless timeout There are two mapped events for each back/forward buttons in this widget: button-press and button-release. When you reach the limits like January and December, button-release is lost, and you don't get it anymore. That caused button_timeout function to not be disable anymore, so it's kept in loop forever. This code fix checks in button_timeout function if any of the back/ forward buttons are still mapped. If not, it prevents from calling button_timout, stopping the loop.
Review of attachment 346583 [details] [review]: LGTM
Attachment 346583 [details] pushed as 0bf0c9e - multi-choice: Fix endless timeout